fix: add padding to allow element to be visible

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -121,6 +121,7 @@
 .partners{
     margin-top:50px;
     padding: 25px 0;
+    padding-bottom: 100px;
     background:#f5f5f5;
 }
 
